--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -11,7 +11,7 @@
   <div class="container-fluid">
     <a class="navbar-brand" href="/" style="color: black">Home</a>
     <a class="nav-link active" aria-current="page" style="color:white" th:href="@{'/score'}" sec:authorize="hasRole('ROLE_ADMIN')">Score</a>
-    <a class="nav-link" style="color:white" th:href="@{'/profile'}" sec:authorize="isAuthenticated()" th:text="${currentUser.getUsername()}"></a>
+    <a class="nav-link" style="color:white" th:href="@{'/profile'}" sec:authorize="isAuthenticated()" >Profile</a>
     <a class="nav-link" style="color:white" th:href="@{'/login'}" sec:authorize="isAnonymous()">Login</a>
     <a class="nav-link" style="color:white" sec:authorize="isAuthenticated()" href="JavaScript:void(0)" onclick="document.getElementById('logoutFormId').submit()">Logout</a>
     <form th:action="@{'/logout'}" method="post" id="logoutFormId" sec:authorize="isAuthenticated()"></form>
