--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -16,15 +16,15 @@
 
 
 <table class="table table-striped">
+    <h1 display-1 text-center>Welcome <span th:text = "${currentUser.name}"></span></h1>
     <tr>
-        <th>Username</th>
+        <th>Email</th>
         <th>Password</th>
         <th>Name</th>
         <th>Surname</th>
-        <th>Email</th>
+        <th>Age</th>
         <th>Gender</th>
         <th>About me</th>
-        <th>Ticket</th>
         <th></th>
     </tr>
 
