--- a/src/main/resources/templates/profileTeam.html
+++ b/src/main/resources/templates/profileTeam.html
@@ -9,9 +9,23 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js%22%3E"></script>
-  <title>Main</title>
+  <title>Profile</title>
 </head>
 <body>
-<h1 class="text-center"> 403 FORBIDDEN</h1>
+<div th:insert="navbar.html :: navbar"></div>
+
+
+<table class="table table-striped">
+  <tr>
+    <th>Name</th>
+    <th>Surname</th>
+    <th>Age</th>
+    <th>Length of Service</th>
+    <th>About</th>
+    <th></th>
+  </tr>
+
+</table>
+</div>
 </body>
 </html>
