--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -14,7 +14,7 @@
 <div th:insert="navbar.html :: navbar"></div>
 <div class="main-contain container">
     <div class="" style="margin-top: 100px; margin-left: 300px; margin-right: 300px">
-        <form class="card py-5 px-4" th:action="@{'/register'}" method="POST" style="background-color: cornflowerblue">
+        <form class="card py-5 px-4" th:action="@{'/register'}" method="POST" style="background-color: orangered">
 
             <label>Mail</label>
             <input type="email" name="mail_field" />
