--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
 <div th:insert="navbar.html :: navbar"></div>
 <div class="main-contain container">
     <div class="" style="margin-top: 100px; margin-left: 300px; margin-right: 300px">
-        <form class="card py-5 px-4" th:action="@{'/auth'}" method="POST" style="background-color: cornflowerblue">
+        <form class="card py-5 px-4" th:action="@{'/auth'}" method="POST" style="background-color: orangered">
             <label>Email:</label>
             <input type="email" name="mail_field"/>
             <label>Password</label>
@@ -24,5 +24,6 @@
         </form>
     </div>
 </div>
+<div th:insert="footer.html"></div>
 </body>
 </html>
